--- a/frontend/src/logi.htm
+++ b/frontend/src/logi.htm
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AgriDiagnosis</title>
-
-    <link rel="stylesheet" href="./styles/logi.css">
-    
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="styles/logi.css">
+    <link rel="stylesheet" href="styles/scroll.css">
 </head>
 
 <body>
+    <button class="continue-guest">Continue as Guest</button>
     <div class="login">
         <h1>Login</h1>
         <div class="input-box">
@@ -19,7 +18,7 @@
             <i class='bx bx-user'></i>
         </div>
         <div class="input-box">
-            <input type="text" placeholder="Password">
+            <input type="password" placeholder="Password">
             <i class='bx bx-lock-alt'></i>
         </div>
         <div class="remember">
